--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.cdnfonts.com/css/seven-segment');
 body {
     margin: 0;
-    font-family: 'Seven Segment', sans-serif;
+    font-family: sans-serif;
 }
 /*----------------------------------------------- this is to give a paralax effects
 */ 
@@ -52,7 +52,7 @@ header {
 }
 .m4 {
     position: absolute;
-    height: 100%;
+    height: 80%;
     width: 100%;
     object-fit: cover;
     z-index: -1;
@@ -62,8 +62,6 @@ header {
 
 .logo {
     position: absolute;
-    height: 30%;
-    width: 20%;
     object-fit: cover;
     z-index: -1;
     transform: translateZ(-4px) scale(1);
@@ -115,7 +113,7 @@ textarea {
     border-radius: 5px;
     resize: vertical;
     width: 90%;
-    font-family: 'Seven Segment', sans-serif;
+    font-family: sans-serif;
 }
 input[type=text] {
     font-size: 20px;
@@ -124,7 +122,7 @@ input[type=text] {
     border-bottom: 2px solid red;
     color: white;
     transition: width 0.4s ease-in-out;
-    font-family: "Papyrus", "Copperplate", Fantasy;
+    font-family: sans-serif;
 }
 input[type=text]:focus {
     width: 90%;
